Cambios barra navegacion y estilos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <title>Inicio App Web</title>
 </head>
 <body>
-    
+    <header class="cabezote">
+        <div id="contenedor-superior">
+            <div class="linea-degrade"></div>
+            <nav>
+            <div class="logo-utadeo">IMAGEN</div>
+            <ul>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="servicios.html" class="boton-basico">SERVICIOS</a></li>
+                <li><a class="boton-basico">CUENTA</a></li>
+            </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
