--- a/index.html
+++ b/index.html
@@ -1,36 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Mariana Correal Barrera">
-    <meta name="description" content="Pagina e Inicio App Web">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Inicio App Web</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header class="cabezote">
-        <div class="linea-degrade"></div>
-        <div class="contenedor-logo">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="Mariana Correal Barrera">
+        <meta name="description" content="Pagina e Inicio App Web">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/estilos.css">
+        <title>Inicio App Web</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/aaaec384da.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <header class="cabezote">
+            <div class="linea-degrade"></div>
             <a href="index.html" class="logo">
-                <img src="/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo" class="logo-utadeo"></img>
+                <img src="/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo"></img>
             </a>
-        </div>
-        <nav>
-        <ul>
-            <li><a href="index.html" class="boton-basico">INICIO</a></li>
-            <li><a href="servicios.html" class="boton-basico">SERVICIOS</a></li>
-            <li><a class="boton-basico">CUENTA</a></li>
-        </ul>
-        </nav>
-    </header>
+            <nav>
+            <ul> 
+                <li><a href="index.html" class="boton-basico">INICIO</a></li>
+                <li><a href="servicios.html" class="boton-basico">SERVICIOS</a>
+                    <ul> 
+                        <li><a href="centroconsulta.html" class="boton-desplegable">CENTRO CONSULTA</a></li>
+                        <li><a href="formularios.html" class="boton-desplegable">FORMULARIOS</a></li>
+                        <li><a href="forointeractivo.html" class="boton-desplegable">FORO INTERACTIVO</a></li>
+                    </ul>
+                </li>
+                <li><a class="boton-basico">CUENTA</a></li>
+            </ul>
+            </nav>
+        </header>
+        <footer>
+            <div class="linea-degrade-dos"></div>
+            <div class="grupo-1">
+                <div class="box">
+                    <h3>Navega</h3>
+                    <ul> 
+                        <li class="lista"><a href="index.html" class="texto-h4">Inicio</a></li>
+                        <li class="lista"><a href="servicios.html" class="texto-h4">Servicios</a>
+                            <ul> 
+                                <li class="lista"><a href="centroconsulta.html" class="texto-h4-opcion">Centro de Consulta</a></li>
+                                <li class="lista"><a href="formularios.html" class="texto-h4-opcion">Formularios</a></li>
+                                <li class="lista"><a href="forointeractivo.html" class="texto-h4-opcion">Foro Interactivo</a></li>
+                            </ul>
+                        </li>
+                        <li class="lista"><a class="texto-h4">Cuenta</a></li>
+                    </ul>
+                </div>
+                <div class="box-especial">
+                    <a href="index.html">
+                        <img src="/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo" class="logo-utadeo"></img>
+                    </a>
+                    <h3>Redes Sociales</h3>
+                    <div class="caja-redes-sociales">
+                        <a href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter fa-2xl"></i></a>
+                    </div>
+                </div>
+                <div class="box">
+                    <h3>Contáctanos</h3>
+                    <ul> 
+                        <li class="texto-h4">Correo electrónico
+                            <ul> 
+                                <li class="texto-h4-opcion">correoejemplo@correoe.com</li>
+                            </ul>
+                        </li>
+                        <li class="texto-h4">Teléfonos
+                            <ul> 
+                                <li class="texto-h4-opcion">+57 1234 1234 123</li>
+                                <li class="texto-h4-opcion">+57 333 123 1233</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="grupo-2">
+                <small>&copy; 2022 Todos los Derechos Reservados</small>
+            </div>
+        </footer>
+    </body>
 
-</body>
 </html>
