--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-        <meta name="author" content="Mariana Correal Barrera">
-        <meta name="description" content="Pagina e Inicio App Web">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/estilos.css">
-        <title>Iniciar Sesion App Web</title>
-</head>
-<body>
-    <section class="seccion-inicio-sesion">
-        <div class="linea-degrade-dos"></div>
-        <img>
-        <h1>Iniciar Sesión</h1>
-        <form>
-            <label for="correo">Correo Electrónico</label><br>
-            <input type="email" id="correo" placeholder="Ingresar el correo electrónico"><br><br>
+    <head>
+        <meta charset="UTF-8">
+            <meta name="author" content="Mariana Correal Barrera">
+            <meta name="description" content="Pagina e Inicio App Web">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="css/estilos.css">
+            <title>Iniciar Sesion App Web</title>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <section class="seccion-inicio-sesion">
+            <div class="linea-degrade-formulario"></div>
+            <img src="/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo" class="logo-utadeo-registro">
+            <h2 class="subtitulo">Iniciar Sesión</h2>
+            <form class="contenedor-formulario">
+                <label for="correo">Correo Electrónico</label>
+                <input class="controles" type="email" id="correo" placeholder="Ingresar el correo electrónico"><br>
 
-            <label for="contrasena">Contraseña</label><br>
-            <input type="password" id="contrasena" placeholder="Ingresar la contraseña">
+                <label for="contrasena">Contraseña</label>
+                <input class="controles" type="password" id="contrasena" placeholder="Ingresar la contraseña"><br><br>
 
-            <input type="submit">
+                <input type="submit"><br>
 
-        </form>
-        <div class="linea-degrade-dos"></div>
-    </section>
-</body>
+            </form>
+            <p class="texto-registrarse">¿Aún sin una cuenta? <a href="registro.html"> Regístrate Aquí</a></p>
+            <div class="linea-degrade-formulario-posterior"></div>
+        </section>
+        <footer>
+            <div class="grupo-2">
+                <small>&copy; 2022 Todos los Derechos Reservados</small>
+            </div>
+        </footer>
+    </body>
 </html>
