Cambios inicio sesion y estilos botones

--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -27,7 +27,8 @@
                 <label for="contrasena">Contraseña</label>
                 <input class="controles" type="password" id="contrasena" placeholder="Ingresar la contraseña"><br><br>
 
-                <input type="submit"><br>
+                <button class="fichaVerde">INGRESAR</button>
+                <!--<input type="submit">INGRESAR<br>-->
 
             </form>
             <p class="texto-registrarse">¿Aún sin una cuenta? <a href="registro.html"> Regístrate Aquí</a></p>
