Boton con diseno funcional

--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -25,7 +25,7 @@
                 <input class="controles" type="email" id="correo" placeholder="Ingresar el correo electrónico"><br>
 
                 <label for="contrasena">Contraseña</label>
-                <input class="controles" type="password" id="contrasena" placeholder="Ingresar la contraseña"><br><br>
+                <input class="controles" type="password" id="contrasena" placeholder="Ingresar la contraseña"><br>
 
                 <button class="fichaVerde">INGRESAR</button>
                 <!--<input type="submit">INGRESAR<br>-->
