Cambios carpetas a carpeta src, registro usuarios firebase autenticacion, popup con diseño

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Pagina e Inicio App Web">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/estilos.css">
         <title>Inicio App Web</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +21,7 @@
         <header class="cabezote">
             <div class="linea-degrade"></div>
             <a href="index.html" class="logo">
-                <img src="/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo"></img>
+                <img src="/src/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo"></img>
             </a>
             <nav>
             <ul> 
@@ -85,6 +86,7 @@
                 <small>&copy; 2022 Todos los Derechos Reservados</small>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 
 </html>
