--- a/src/iniciosesion.html
+++ b/src/iniciosesion.html
@@ -6,6 +6,7 @@
             <meta name="description" content="Pagina e Inicio App Web">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
             <link rel="stylesheet" href="css/estilos.css">
             <title>Iniciar Sesion App Web</title>
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,7 @@
     <body>
         <section class="seccion-inicio-sesion">
             <div class="linea-degrade-formulario"></div>
-            <img src="/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo" class="logo-utadeo-registro">
+            <img src="/src/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo" class="logo-utadeo-registro">
             <h2 class="subtitulo">Iniciar Sesión</h2>
             <form class="contenedor-formulario">
                 <label for="correo">Correo Electrónico</label>
