--- a/src/registro.html
+++ b/src/registro.html
@@ -6,7 +6,10 @@
             <meta name="description" content="Pagina e Inicio App Web">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <!--Toastify-->
+            <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
             <link rel="stylesheet" href="css/estilos.css">
+            <script src="./main.js" type="module"></script>
             <title>Registro App Web</title>
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,20 +21,21 @@
     <body>
         <section class="seccion-inicio-sesion">
             <div class="linea-degrade-formulario"></div>
-            <img src="/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo" class="logo-utadeo-registro">
+            <img src="/src/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo" class="logo-utadeo-registro">
             <h2 class="subtitulo">Registro</h2>
             <h4 class="texto-explicativo">Para registrarse ingresar un correo electrónico y una contraseña válida</h4>
-            <form class="contenedor-formulario">
-                <label for="correo">Correo Electrónico</label>
-                <input class="controles" type="email" id="correo" placeholder="Ingresar el correo electrónico"><br><br>
+            
+            <form class="contenedor-formulario" id="signup-form">
+                <label for="signup-email">Correo Electrónico</label>
+                <input class="controles" type="email" name="email" id="signup-email" placeholder="Ingresar el correo electrónico" required><br><br>
 
-                <label for="contrasena">Contraseña</label>
-                <input class="controles" type="password" id="contrasena" placeholder="Ingresar la contraseña"><br>
+                <label for="signup-password">Contraseña</label>
+                <input class="controles" type="password" name="psw" id="signup-password" placeholder="Ingresar la contraseña" required><br>
 
                 <label for="repetircontrasena">Repetir Contraseña</label>
                 <input class="controles" type="password" id="repetircontrasena" placeholder="Ingresar la contraseña"><br>
 
-                <button class="fichaVerde">REGISTRARSE</button>
+                <button class="fichaVerde" id="submit" name="submit">REGISTRARSE</button>
                 <!--<input type="submit">INGRESAR<br>-->
 
             </form>
@@ -43,5 +47,8 @@
                 <small>&copy; 2022 Todos los Derechos Reservados</small>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+        <!--Toastify-->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     </body>
 </html>
