Mensajes de registro exitoso y de error, y  primera parte cerrar sesion

--- a/src/registro.html
+++ b/src/registro.html
@@ -36,6 +36,7 @@
                 <input class="controles" type="password" id="repetircontrasena" placeholder="Ingresar la contraseña"><br>
 
                 <button class="fichaVerde" id="submit" name="submit">REGISTRARSE</button>
+                <button class="fichaVerde" id="logout">CERRAR SESIÓN</button>
                 <!--<input type="submit">INGRESAR<br>-->
 
             </form>
