--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <meta charset="UTF-8">
         <meta name="author" content="Mariana Correal Barrera">
-        <meta name="description" content="Pagina e Inicio App Web">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/estilos.css">
-        <title>Inicio App Web</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/aaaec384da.js" crossorigin="anonymous"></script>
+            <meta name="description" content="Pagina e Inicio App Web">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <!--Toastify-->
+            <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+            <link rel="stylesheet" href="css/estilos.css">
+            <script src="./main.js" type="module"></script>
+            <title>Inicio App Web</title>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+            <script src="https://kit.fontawesome.com/aaaec384da.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="cabezote">
@@ -25,15 +26,19 @@
             </a>
             <nav>
             <ul> 
-                <li><a href="index.html" class="boton-basico">INICIO</a></li>
-                <li><a href="servicios.html" class="boton-basico">SERVICIOS</a>
+                <li><a href="index.html" class="fichaVerde">INICIO</a></li>
+                <li><a href="servicios.html" class="fichaVerde">SERVICIOS</a>
                     <!--<ul> 
                         <li><a href="centroconsulta.html" class="boton-desplegable">CENTRO CONSULTA</a></li>
                         <li><a href="formularios.html" class="boton-desplegable">FORMULARIOS</a></li>
                         <li><a href="forointeractivo.html" class="boton-desplegable">FORO INTERACTIVO</a></li>
                     </ul>-->
                 </li>
-                <li><a class="boton-basico">CUENTA</a></li>
+                <li><a class="fichaVerde">CUENTA</a>
+                    <ul>
+                        <li><a class="fichaVerde" id="logout">CERRAR SESIÓN</a></li>
+                    </ul>
+                </li>
             </ul>
             </nav>
         </header>
@@ -56,7 +61,7 @@
                 </div>
                 <div class="box-especial">
                     <a href="index.html">
-                        <img src="/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo" class="logo-utadeo"></img>
+                        <img src="/src/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo" class="logo-utadeo"></img>
                     </a>
                     <h3>Redes Sociales</h3>
                     <div class="caja-redes-sociales">
@@ -87,6 +92,8 @@
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+        <!--Toastify-->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     </body>
 
 </html>
