--- a/src/registro.html
+++ b/src/registro.html
@@ -8,8 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Toastify-->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-        <link rel="stylesheet" href="css/estilos.css">
-        <script src="./app/signupForm.js" type="module"></script>
+        <link rel="stylesheet" href="./css/estilos.css">
         <title>Registro App Web</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,16 +26,15 @@
             
             <form class="contenedor-formulario" id="signup-form">
                 <label for="signup-email">Correo Electrónico</label>
-                <input class="controles" type="email" name="email" id="signup-email" placeholder="Ingresar el correo electrónico" required><br><br>
+                <input class="controles" type="email" name="email" id="email" placeholder="Ingresar el correo electrónico" required><br><br>
 
                 <label for="signup-password">Contraseña</label>
-                <input class="controles" type="password" name="psw" id="signup-password" placeholder="Ingresar la contraseña" required><br>
+                <input class="controles" type="password" name="psw" id="psw" placeholder="Ingresar la contraseña" required><br>
 
                 <label for="repetircontrasena">Repetir Contraseña</label>
                 <input class="controles" type="password" id="repetircontrasena" placeholder="Ingresar la contraseña"><br>
 
-                <button class="fichaVerde" id="submit" name="submit">REGISTRARSE</button>
-                <button class="fichaVerde" id="logout">CERRAR SESIÓN</button>
+                <button class="fichaVerde" id="submitData" name="submit">REGISTRARSE</button>
                 <!--<input type="submit">INGRESAR<br>-->
 
             </form>
@@ -48,7 +46,7 @@
                 <small>&copy; 2022 Todos los Derechos Reservados</small>
             </div>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="app/nuevoRegistro.js" type="module"></script>
         <!--Toastify-->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     </body>
