Menu navegacion botones basicos con diseño

--- a/src/index.html
+++ b/src/index.html
@@ -25,18 +25,18 @@
                 <img src="/src/img/new_logo_utadeo_negativo.png" alt="Logo Utadeo"></img>
             </a>
             <nav>
-            <ul> 
-                <li><a href="index.html" class="fichaVerde">INICIO</a></li>
-                <li><a href="servicios.html" class="fichaVerde">SERVICIOS</a>
-                    <!--<ul> 
-                        <li><a href="centroconsulta.html" class="boton-desplegable">CENTRO CONSULTA</a></li>
-                        <li><a href="formularios.html" class="boton-desplegable">FORMULARIOS</a></li>
-                        <li><a href="forointeractivo.html" class="boton-desplegable">FORO INTERACTIVO</a></li>
-                    </ul>-->
+            <ul class="contenedor-opciones-nav"> 
+                <li><a href="index.html" class="fichaVerdeInicio">INICIO</a></li>
+                <li><a href="servicios.html" class="fichaAzulServicios">SERVICIOS</a>
+                    <ul> 
+                        <!--<li><a href="centroconsulta.html" class="boton-opcion.nav">CENTRO CONSULTA</a></li>-->
+                        <!--<li><a href="formularios.html" class="boton-opcion-nav">FORMULARIOS</a></li>-->
+                        <!--<li><a href="forointeractivo.html" class="boton-opcion-nav">FORO INTERACTIVO</a></li>-->
+                    </ul>
                 </li>
-                <li><a class="fichaVerde">CUENTA</a>
+                <li><a class="fichaAzulCuenta">CUENTA</a>
                     <ul>
-                        <li><a class="fichaVerde" id="logout">CERRAR SESIÓN</a></li>
+                        <!--<li><a class="fichaVerde" id="logout">CERRAR SESIÓN</a></li>-->
                     </ul>
                 </li>
             </ul>
