--- a/src/registro.html
+++ b/src/registro.html
@@ -26,7 +26,7 @@
             
             <form class="contenedor-formulario" id="signup-form">
                 <label for="signup-email">Correo Electrónico</label>
-                <input class="controles" type="email" name="email" id="email" placeholder="Ingresar el correo electrónico" required><br><br>
+                <input class="controles" type="email" name="email" id="email" placeholder="Ingresar el correo electrónico" required><br>
 
                 <label for="signup-password">Contraseña</label>
                 <input class="controles" type="password" name="psw" id="psw" placeholder="Ingresar la contraseña" required><br>
@@ -39,6 +39,7 @@
 
             </form>
             <p class="texto-explicativo">Al registrarse acepta los<a href="#"> Terminos y Condiciones</a></p>
+            <p class="texto-registrarse">¿Ya tiene una cuenta? <a href="registro.html"> Iniciar Sesión</a></p>
             <div class="linea-degrade-formulario-posterior"></div>
         </section>
         <footer>
