Menu de navegacion con desplegable de servicios funcional

--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,11 @@
             <nav>
             <ul class="contenedor-opciones-nav"> 
                 <li><a href="index.html" class="fichaVerdeInicio">INICIO</a></li>
-                <li><a href="servicios.html" class="fichaAzulServicios">SERVICIOS</a>
-                    <ul> 
-                        <!--<li><a href="centroconsulta.html" class="boton-opcion.nav">CENTRO CONSULTA</a></li>-->
-                        <!--<li><a href="formularios.html" class="boton-opcion-nav">FORMULARIOS</a></li>-->
-                        <!--<li><a href="forointeractivo.html" class="boton-opcion-nav">FORO INTERACTIVO</a></li>-->
+                <li><a href="#" class="fichaAzulServicios">SERVICIOS</a>
+                    <ul class="menu-vertical"> 
+                        <li><a href="centroconsulta.html" class="boton-azul-centroconsulta">CENTRO CONSULTA</a></li>
+                        <li><a href="formularios.html" class="boton-azul-formularios">FORMULARIOS</a></li>
+                        <li><a href="forointeractivo.html" class="boton-azul-foros">FORO INTERACTIVO</a></li>
                     </ul>
                 </li>
                 <li><a class="fichaAzulCuenta">CUENTA</a>
