Se crea Seccion servicios inicio y modificacion codigo base paginas

--- a/src/index.html
+++ b/src/index.html
@@ -36,12 +36,38 @@
                 </li>
                 <li><a class="fichaAzulCuenta">CUENTA</a>
                     <ul>
+                        <!--<img>-->
+                        <!--<h3>Nombre Usuario</h3>-->
                         <!--<li><a class="fichaVerde" id="logout">CERRAR SESIÓN</a></li>-->
                     </ul>
                 </li>
             </ul>
             </nav>
         </header>
+        <section class="servicios">
+            <h1 class="titulo-principal">Servicios Disponibles</h1>
+            <div class="grupo-1">
+                <div class="box-servicios">
+                    <img src="./img/sevicios-centro-consulta-inicio.png" alt="sevicios-centro-consulta-inicio">
+                    <h2>Centro de Consulta</h2>
+                    <a href="./centroconsulta.html" class="fichaVerde">Visitar</a>
+                </div>
+                <div class="box-servicios">
+                    <img src="./img/sevicios-formularios-inicio.png" alt="sevicios-formularios-inicio">
+                    <h2>Formularios</h2>
+                    <a href="./formularios.html" class="fichaVerde">Visitar</a>
+                </div>
+                <div class="box-servicios">
+                    <img src="./img/sevicios-foros-inicio.png" alt="">
+                    <h2>Foro Interactivo</h2>
+                    <a href="./forointeractivo.html" class="fichaVerde">Visitar</a>
+                </div>
+            </div>
+        </section>
+        <section class="seccion-slider">
+            <h1 class="titulo-principal">La Comunicación Educativa</h1>
+            <div></div>
+        </section>
         <footer>
             <div class="linea-degrade-dos"></div>
             <div class="grupo-1">
