--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
             <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
             <link rel="stylesheet" href="css/estilos.css">
             <script src="./main.js" type="module"></script>
+            <script src="./app/logout.js" type="module"></script>
             <title>Inicio App Web</title>
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,11 +35,11 @@
                         <li><a href="forointeractivo.html" class="boton-azul-foros">FORO INTERACTIVO</a></li>
                     </ul>
                 </li>
-                <li><a class="fichaAzulCuenta">CUENTA</a>
-                    <ul>
+                <li><a href="iniciosesion.html" class="fichaAzulCuenta" id="logout">CERRAR S.</a>
+                    <ul class="menu-vertical-dos">
                         <!--<img>-->
                         <!--<h3>Nombre Usuario</h3>-->
-                        <!--<li><a class="fichaVerde" id="logout">CERRAR SESIÓN</a></li>-->
+                        <!--<li><a href="iniciosesion.html" class="boton-azul-centroconsulta" id="logout">CERRAR SESIÓN</a></li>-->
                     </ul>
                 </li>
             </ul>
