--- a/src/servicios.html
+++ b/src/servicios.html
@@ -34,7 +34,7 @@
                         <li><a href="forointeractivo.html" class="boton-azul-foros">FORO INTERACTIVO</a></li>
                     </ul>
                 </li>
-                <li><a class="fichaAzulCuenta">CUENTA</a>
+                <li><a href="iniciosesion.html" class="fichaAzulCuenta" id="logout">CERRAR S.</a>
                     <ul>
                         <!--<li><a class="fichaVerde" id="logout">CERRAR SESIÓN</a></li>-->
                     </ul>
