Rectificacion del registro y pantallas

--- a/src/registro.html
+++ b/src/registro.html
@@ -39,7 +39,7 @@
 
             </form>
             <p class="texto-explicativo">Al registrarse acepta los<a href="#"> Terminos y Condiciones</a></p>
-            <p class="texto-registrarse">¿Ya tiene una cuenta? <a href="registro.html"> Iniciar Sesión</a></p>
+            <p class="texto-registrarse">¿Ya tiene una cuenta? <a href="iniciosesion.html"> Iniciar Sesión</a></p>
             <div class="linea-degrade-formulario-posterior"></div>
         </section>
         <footer>
